@@ -1,49 +1,42 @@
-/*
- * Copyright (C) 2004 Jorn Baayen <jorn@nl.linux.org>
- * 
- * Modified by Todd Berman <tberman@sevenl.net> to fit with MonoDevelop.
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public
- * License along with this program; if not, write to the
- * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
- * Boston, MA 02111-1307, USA.
- *
- * !!! Note that this class has to have the same API as the one
- *     from GNU.Gettext.dll, because otherwise the strings won't
- *     be picked up by update-po.
- */
+//
+// GettextCatalog.cs
+//
+// Author:
+//   Lluis Sanchez Gual
+//
+// Copyright (C) 2007 Novell, Inc (http://www.novell.com)
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+// 
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+// 
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+//
 
 using System;
-//using Mono.Unix;
 
 namespace Mono.Addins
 {
-
+	// TODO: Add real translation suport, which can work in Windows
+	
 	internal class GettextCatalog
 	{
-		static GettextCatalog ()
-		{
-//			Catalog.Init ("mono-addins", "/home/lluis/install//share/locale");
-		}
-	
-		private GettextCatalog ()
-		{
-		}
-
 		public static string GetString (string str)
 		{
 			return str;
-//			return str != null ? Catalog.GetString (str) : null;
 		}
 	
 		public static string GetString (string str, params object[] arguments)
